day3/lab4-kyverno/good-pod-validate.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
  labels:
    app: hello-node
    team: devsecops
spec:
  containers:
    - name: hello-node
      image: registry.k8s.io/e2e-test-images/agnhost:2.53
      args: ["/agnhost", "netexec", "--http-port=8080"]
